[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/player.png" type="Texture" id=1]
[ext_resource path="res://src/Actors/Player.gd" type="Script" id=2]

[sub_resource type="OccluderPolygon2D" id=4]
polygon = PoolVector2Array( -35, -49, 34, -49, 41, -45, 46, -40, 49, -35, 49, 33, 45, 41, 40, 46, 36, 48, 36, 48, 31, 49, -32, 49, -39, 46, -44, 42, -48, 36, -49, 35, -49, -34, -45, -42, -39, -47 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 40, 40 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 45, 41 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 50, 9 )

[node name="Player" type="KinematicBody2D"]
collision_mask = 8
script = ExtResource( 2 )
jump_impulse = 1600.0

[node name="Player" type="Sprite" parent="."]
position = Vector2( 0, -48 )
texture = ExtResource( 1 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="Player"]
occluder = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -40 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -279 )
current = true
limit_left = 0
limit_top = 0
limit_smoothed = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 7.0
drag_margin_left = 0.0
drag_margin_top = 0.0

[node name="EnemyDetector" type="Area2D" parent="."]
modulate = Color( 0.937255, 0.364706, 0.0235294, 1 )
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetector"]
position = Vector2( 0, -41 )
shape = SubResource( 2 )

[node name="StompDetector" type="Area2D" parent="."]
modulate = Color( 0.937255, 0.364706, 0.0235294, 1 )
collision_layer = 0
collision_mask = 16
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="StompDetector"]
shape = SubResource( 3 )

[connection signal="area_entered" from="EnemyDetector" to="." method="_on_EnemyDetector_area_entered"]
[connection signal="body_entered" from="EnemyDetector" to="." method="_on_EnemyDetector_body_entered"]
[connection signal="area_entered" from="StompDetector" to="." method="_on_StompDetector_area_entered"]
